[metadata]
name=ICQBotPy
version=0.2.5-beta
description="An ICQ async bot framework"
long_description= file: README.md
author=Kamuri Amorim
author_email=luiz.k.amorim@gmail.com
url=https://github.com/kamuridesu/ICQBotPy
keywords=icq bot framework async python
license=MIT
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
[options]
zip_safe = False
packages =
    ICQBot
install_requires =
    aiohttp<=3.8.1
