[metadata]
name=ICQBot
version=0.2.6-beta
description="An ICQ async bot framework"
long_description= file: README.md
long_description_content_type=text/markdown
author=Kamuri Amorim
author_email=luiz.k.amorim@gmail.com
url=https://github.com/kamuridesu/ICQBotPy
keywords=icq bot framework async python
license=MIT
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
[options]
zip_safe = False
packages =
    ICQBot
install_requires =
    aiohttp<3.8.4
[options.extras_require]
test = pytest-aiohttp; pytest
